--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -94,6 +94,7 @@ $dir: rtl;
 @import "../layouts/garage-popup";
 @import "../state/checkout/cart";
 @import "../state/checkout/order_summary.scss";
+@import "../state/quotations";
 @import "../layouts/quotation-request";
 @import "../layouts/send-request";
 @import "../layouts/search_result";
@@ -107,3 +108,9 @@ $dir: rtl;
 @import "../layouts/setting/orders";
 @import "../layouts/setting/payment";
 @import "../layouts/setting/addresses";
+@import "../layouts/setting/side-bar";
+
+@import "../state/checkout/checkout-shipping";
+@import "../state/checkout/checkout-payment";
+@import "../state/checkout/checkout-order";
+@import "../state/checkout/checkout-confirmation-order";
