--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -29,7 +29,7 @@
 }
 
 @mixin link-border-radius {
-  border-radius: side-values(0 20px 20px 20px) !important;
+  border-radius: corner-values(0 20px 20px 20px) !important;
 }
 
 @mixin rounded-rectangle {
