--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -320,8 +320,8 @@
     height: 40px;
     color: $basic-gray;
     @include font-size(17px);
-    padding-left: 0;
-    padding-right: 0;
+    @include padding-left(0);
+    @include padding-right(0);
     text-align: center;
   }
   button{
@@ -333,7 +333,7 @@
     i{
       @include font-size(12px);
       position: absolute;
-      #{$left}: 50%;
+      left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
     }
