--- a/scss/state/checkout/_cart.scss
+++ b/scss/state/checkout/_cart.scss
@@ -60,7 +60,7 @@
         background-color: $green;
         border-radius: 100px;
         display: inline-block;
-        margin-right: 5px;
+        @include margin-right(5px);
         position: relative;
         top: -2px;
       }
@@ -87,8 +87,8 @@
     @extend .d-block;
     @extend .text-right;
     @extend .mt-2;
-    padding-right: 20px;
-    padding-left: 20px;
+    @include padding-right(20px);
+    @include padding-left(20px);
     @include font-size(20px);
     margin-bottom: 72px;
     i{
@@ -162,7 +162,7 @@
   }
 }
 .cart-header{
-  padding-#{$right}: 0;
+  @include text-left;
   label{
     font-weight: 400;
     @include font-size(14px);
