--- a/scss/state/checkout/_checkout-shipping.scss
+++ b/scss/state/checkout/_checkout-shipping.scss
@@ -228,7 +228,7 @@
           .RenderField{
             @include padding-left(10px);
             border-radius: side-values(20px 0 20px 20px) !important;
-            margin-left: -13px;
+            @include margin-left(-13px);
             input{
               margin-bottom: 0px;
               border-bottom: none;
@@ -246,7 +246,7 @@
           margin-top: 32px;
           margin-bottom: 50px;
           .btn-light{
-            float: right;
+            float: $right;
             height: auto;
             background-color: $light-gray;
             border-radius: side-values(0 0 0 20px) !important;
@@ -260,7 +260,7 @@
             }
           }
           .btn-primary{
-            float: right;
+            float: $right;
             @include margin-left(5px);
             width: 80%;
             border-radius: side-values(0 20px 20px 0) !important;
@@ -288,7 +288,7 @@
           @include box-shadow;
           text-align: $right;
           text-transform: none;
-          float: right;
+          float: $right;
           color: $white;
           margin-top: 21px;
           margin-bottom: 71px;
@@ -300,23 +300,15 @@
     }
   }
   .default-header-bg{
+    @include text-left;
     margin-bottom: 70px;
     header{
       h1{
-        margin-top: 10px;
-        font-family: Roboto;
         @include font-size(30px);
-        font-weight: 500;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        text-align: $left;
-        color: #fefeff;
       }
     }
     .header-options{
-      float: right;
+      float: $right;
       margin-top: 27px;
       position: relative;
       .payment{
@@ -333,7 +325,7 @@
           display: block !important;
           color: red;
           position: absolute;
-          margin-left: 5%;
+          @include margin-left(5%);
           i::before{
             background: white;
             border-radius: 50%;
@@ -366,7 +358,7 @@
         div{
           color: red;
           position: absolute;
-          margin-left: 5%;
+          @include margin-left(5%);
           i::before{
             background: white;
             border-radius: 50%;
@@ -388,7 +380,7 @@
           display: block !important;
           color: red;
           position: absolute;
-          margin-left: 5%;
+          @include margin-left(5%);
           i::before{
             background: white;
             border-radius: 50%;
@@ -401,8 +393,8 @@
         color: $white;
         border: none;
         padding: 12px;
-        padding-left: 20px;
-        padding-right: 30px;
+        @include padding-left(20px);
+        @include padding-right(30px);
         span{
           @include margin-left(7px);
         }
