--- a/scss/layouts/category/_motor-oil.scss
+++ b/scss/layouts/category/_motor-oil.scss
@@ -42,10 +42,10 @@
       }
     }
     img{
-      width: 160px;
+      width: 100%;
       height: 79px;
       margin-bottom: 20px;
-      @include margin-right(30px);
+      @include margin-right(10px);
     }
   }
   .poster{
