--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -52,6 +52,7 @@ $dir: rtl;
 @import "../base/mixins";
 @import "../base/normalize";
 @import "../base/base";
+@import "../base/float_label";
 
 /*MODULES  - Individual site components */
 @import "../modules/typography";
