--- a/scss/layouts/setting/_addresses.scss
+++ b/scss/layouts/setting/_addresses.scss
@@ -1,4 +1,5 @@
 #addresses-container{
+  @include text-left;
   @include margin-left(10px);
   .addresses-header{
     display: flex;
@@ -222,11 +223,6 @@
         margin-bottom: 44px;
         form{
           margin: 0px;
-          .RenderField{
-            label{
-              top: 6px;
-            }
-          }
           .title-address{
             margin-bottom: 20px;
             .form-control{
@@ -407,6 +403,7 @@
 
 .adresses-mobile{
   #addresses-container{
+    @include text-left;
     margin: 0px;
     .row{
       margin-left: 0px;
@@ -649,11 +646,6 @@
         .Address-container{
           form{
             margin: 0px;
-            .RenderField{
-              label{
-                top: 6px;
-              }
-            }
             .title-address{
               margin-bottom: 20px;
               .form-control{
