--- a/scss/state/checkout/_checkout-confirmation-order.scss
+++ b/scss/state/checkout/_checkout-confirmation-order.scss
@@ -8,39 +8,18 @@
       @include font-size(90px);
       opacity: .1;
     }
-    p{
-      font-family: Roboto;
-      @include font-size(50px);
-      font-weight: 300;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      color: $basic-gray;
-      margin-bottom: 40px;
-      margin-top: -20px;
-      span{
-        border-bottom:1px solid red;
-      }
-    }
-    h5{
-      font-family: Roboto;
-      @include font-size(18px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 1.67;
-      letter-spacing: normal;
-      text-align: center;
-      margin-bottom: 40px;
-      color: var(--dark-charcoal-grey);
-      span{
-        color: #ee4036;
+    .sec-header{
+      text-align: unset !important;
+      h1 {
+        @include text-capitalize;
+        p {
+          float: none;
+        }
       }
     }
     div{
       text-align: $right;
-      margin: side-values(0px 127px 0px 0px) !important;
+      margin: corner-values(0px 127px 0px 0px) !important;
       img{
         background: none;
         margin: 0px;
@@ -67,7 +46,7 @@
       background: $brand-color;
       text-transform: none;
       color: white;
-      border-radius: side-values(0px 20px 20px 0px) !important;
+      border-radius: corner-values(0px 20px 20px 0px) !important;
       i{
         margin-#{$left}: 10px;
       }
@@ -85,18 +64,13 @@
       padding-bottom: 20px;
     }
     .title{
-      border-radius: side-values(20px 0 0 0);
+      border-radius: corner-values(20px 0 0 0);
       background: white;
       padding: 20px;
       margin-bottom: 2px;
       font-family: Roboto;
       @include font-size(25px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      text-align: left;
+      @include text-left;
       color: #37363c;
     }
     .item-list{
@@ -131,10 +105,11 @@
     .estimation{
       margin-bottom: 30px;
       .title{
-        border-radius: side-values(0);
+        border-radius: corner-values(0);
         margin-bottom: 2px;
       }
       .estimation-table{
+        @include text-left;
         background: $white;
         padding: 20px;
         .first-row{
@@ -155,6 +130,7 @@
       }
     }
     .delivery-address{
+      @include text-left;
       .DeliveryAddress_subheader{
         h4{
           padding: 20px;
@@ -162,7 +138,7 @@
           margin-bottom: 2px;
         }
         .addresses-box_item{
-          border-radius: side-values(0 0 0 20px);
+          border-radius: corner-values(0 0 0 20px);
           background: $white;
           margin-bottom: 25px;
           padding: 20px;
@@ -224,6 +200,7 @@
       }
     }
     .payment-method{
+      @include text-left;
       background: none !important;
      .PaymentMethod_subheader{
        h4{
@@ -232,7 +209,7 @@
          margin-bottom: 2px;
        }
        .payment-box_item{
-         border-radius: side-values(0 0 20px 0);
+         border-radius: corner-values(0 0 20px 0);
          background: $white;
          padding: 10px;
          padding-bottom: 20px;
