--- a/scss/state/checkout/_order_summary.scss
+++ b/scss/state/checkout/_order_summary.scss
@@ -57,7 +57,7 @@
   }
   .btn-primary {
     width: 100%;
-    border-radius: side-values(0 0 20px 20px) !important;
+    border-radius: corner-values(0 0 20px 20px) !important;
     text-align: $right;
     text-transform: capitalize;
   }
