--- a/scss/modules/_render_products.scss
+++ b/scss/modules/_render_products.scss
@@ -64,7 +64,7 @@
   width: auto;
   display: flex;
   top: 50%;
-  #{$left}: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 
   .btn-detail {
