finished the quotation page

--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -215,13 +215,13 @@
 }
 
 @mixin boarder-left-radius($top: 20px, $bottom: 20px) {
-  border-top-left-radius: $top;
-  border-bottom-left-radius: $bottom;
+  border-top-#{$left}-radius: $top;
+  border-bottom-#{$left}-radius: $bottom;
 }
 
 @mixin boarder-right-radius($top: 20px, $bottom: 20px) {
-  border-top-right-radius: $top;
-  border-bottom-right-radius: $bottom;
+  border-top-#{$right}-radius: $top;
+  border-bottom-#{$right}-radius: $bottom;
 }
 
 @mixin large-medium-screens {
