--- a/scss/layouts/_quotation-request.scss
+++ b/scss/layouts/_quotation-request.scss
@@ -113,6 +113,7 @@
 }
 
 #custom-details {
+  @include text-left;
   padding-bottom: 87px;
   .title-container {
     padding-top: 66px;
@@ -148,7 +149,7 @@
   .custom-container {
     @include box-shadow;
     @include boarder-left-radius;
-    margin-left: 11px;
+    @include margin-left(11px);
     padding-bottom: 10px;
     margin-bottom: 30px;
 
@@ -290,7 +291,7 @@
       }
 
       .part-desc-field {
-        padding-left: 10px;
+        @include padding-left(10px);
         width: 100%;
         height: 55px;
         background: $light-gray;
@@ -307,7 +308,7 @@
 
       .number-picker-container {
         @include large-medium-screens {
-          padding-left: 0;
+          @include padding-left(0);
         }
         @include padding-right(5px);
 
@@ -319,12 +320,12 @@
         #number-picker {
           .btn-positive {
             @include font-size(18px);
-            border-radius: side-values(0) !important;
+            border-radius: corner-values(0) !important;
             height: 55px;
           }
           .btn-negative {
             @include font-size(18px);
-            border-radius: side-values(0 0 $border-radius-base 0) !important;
+            border-radius: corner-values(0 0 $border-radius-base 0) !important;
             height: 55px;
           }
           input {
@@ -334,7 +335,7 @@
             height: 55px;
             text-align: center;
             cursor: inherit;
-            border-radius: side-values(0 0 0 0) !important;
+            border-radius: corner-values(0 0 0 0) !important;
           }
         }
       }
@@ -364,10 +365,10 @@
         @include font-size(15px);
         position: absolute;
         width: inherit;
-        right: -16px;
+        #{$right}: -16px;
         top: 11px;
         background: $white;
-        border-top-right-radius: 0 !important;
+        border-top-#{$right}-radius: 0 !important;
       }
       i {
         @include padding-right(6px);
