--- a/scss/layouts/_product.scss
+++ b/scss/layouts/_product.scss
@@ -535,35 +535,27 @@
         .product-price {
           height: 22px;
           font-family: Roboto;
-          font-size: 30px;
-          font-weight: 300;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: -3px;
-          text-align: left;
+          text-align: $left;
+          @include font-size(39px);
+          color: $dark-charcoal-grey;
         }
         .product-price-sr {
           height: 12px;
-          font-family: Roboto;
-          font-size: 15px;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: left;
+          @include font-size(18px);
+          text-align: $left;
+          color: $dark-charcoal-grey;
+          @include margin-left(3px);
         }
         .product-quantity {
           height: 14px;
           opacity: 0.8;
           font-family: Roboto;
-          font-size: 15px;
+          @include font-size(15px);
           font-weight: normal;
           font-style: normal;
           font-stretch: normal;
           letter-spacing: normal;
-          text-align: left;
+          text-align: $left;
           color: rgba(39, 39, 52, 0.8);
         }
       }
@@ -579,6 +571,7 @@
       border-radius: side-values(20px 0px 0px 20px) !important;
       height: 52px;
       color: black;
+      padding-top: 10px;
       span {
         font-family: Roboto;
         font-size: 20px;
@@ -589,24 +582,18 @@
       border-radius: side-values(0px 0px 20px 0px) !important;
       height: 52px;
       font-family: Roboto;
-      font-size: 30px;
-      font-weight: 300;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: -3px;
-      margin-left: 2px;
-
+      @include font-size(30px);
+      color: $dark-charcoal-grey;
+      @include margin-left(2px);
+      padding-top: 7px;
+      @include padding-left(6px);
       sub {
         height: 12px;
         font-family: Roboto;
-        font-size: 15px;
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        text-align: left;
+        @include font-size(16px);
+        text-align: $left;
+        @include margin-left(3px);
+        @include margin-right(10px);
         color: $dark-charcoal-grey;
       }
     }
@@ -630,6 +617,9 @@
         border-radius: side-values(0px 20px 20px 0px) !important;
         font-size: 20px;
         margin-#{$left}: 9px;
+        i{
+          @include margin-left(6px);
+        }
       }
       .group-shadow-input {
         height: 10px;
@@ -737,18 +727,18 @@
         width: 71px;
         height: 12px;
         font-family: Roboto;
-        font-size: 15px;
+        @include font-size(15px);
         font-style: normal;
         font-stretch: normal;
         line-height: normal;
         letter-spacing: normal;
-        text-align: left;
+        text-align: $left;
         color: #272734;
       }
       .product-review {
         height: 10px;
         font-family: Roboto;
-        font-size: 13px;
+        @include font-size(13px);
         font-weight: normal;
         font-style: normal;
         font-stretch: normal;
@@ -760,12 +750,7 @@
       }
       .product-item_sales-price {
         font-family: Roboto;
-        font-size: 30px;
-        font-weight: 300;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: -2px;
+        @include font-size(30px);
         text-align: $left;
         color: #37363c;
         .SR {
@@ -804,9 +789,9 @@
     div.sale-price {
       border-radius: side-values(0px 0px 20px 0px) !important;
       margin-#{$left}: 3px;
-      width: 20%;
+      width: 25%;
+      @include padding-left(5px);
       span {
-        letter-spacing: -2px;
         font-family: Roboto;
         font-size: 17px;
         text-align: $left;
@@ -818,8 +803,10 @@
       margin-top: 32px;
       height: 55px;
       color: $black;
-      width: 80%;
+      width: 75%;
       text-transform: none;
+      padding-top: 13px;
+      @include padding-right(6px);
       span {
         font-family: Roboto;
         font-size: 17px;
@@ -846,6 +833,9 @@
       color: white;
       border-radius: side-values(0px 20px 20px 0px) !important;
       margin-left: 10px;
+      i{
+        @include margin-left(6px);
+      }
     }
   }
 }
