finished the home page translation

--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -459,6 +459,7 @@
         }
         &:first-child{
           padding-#{$left}: 0;
+          @include margin-left(0);
           border-#{$left}-width: 0;
         }
       }
